# road

./: .gitignore  Cargo.toml  imgui.ini  overtake_rd.cap
.cargo/: config.toml
assets/shaders/: car_debug.wgsl  car_render.slang  car_render.wgsl  clear.wgsl  compute.wgsl  frustum_cull.slang  gpu_shared.slang  grid.slang  grid.wgsl  render.wgsl  road_draft.slang  road_eval.slang  road_line.slang  road_line.wgsl  road_render.slang  road_render.wgsl  sdf_debug.wgsl  sdf_generate.slang  sdf_generate.wgsl  tile_cull.slang  traffic_idm.slang  traffic_idm.wgsl  traffic_lane_change.slang  traffic_lane_change.wgsl  traffic_sort_histogram.slang  traffic_sort_histogram.wgsl  traffic_sort_keys.wgsl  traffic_sort_scan.wgsl  traffic_sort_scatter.slang  traffic_sort_scatter.wgsl  traffic_update.wgsl
assets/shaders/shared/: road_eval.wgsl  types.wgsl
crates/app/: Cargo.toml
crates/app/assets/shaders/: gradient.comp  road.frag  road.vert  sdf.comp
crates/app/src/: lib.rs  road_constructor.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/assets/shaders/: egui.slang
crates/engine/src/: camera.rs  car_renderer.rs  component.rs  core.rs  egui_renderer.rs  engine.rs  frustum_cull.rs  gpu_pipeline_stats.rs  gpu_resources.rs  gpu_timestamps.rs  imgui_renderer.rs  lib.rs  pipeline.rs  sdf.rs  tile_cache.rs  vulkan_util.rs  world.rs
crates/gpu-shared/: Cargo.toml
crates/gpu-shared/src/: lib.rs  road_eval.rs  types.rs
crates/road/: Cargo.toml
crates/road/src/: fitting.rs  lib.rs  network.rs  primitives.rs
crates/shaders/: Cargo.toml
crates/shaders/src/: car_render.rs  frustum_cull.rs  grid.rs  lib.rs  road_eval.rs  road_line.rs  road_render.rs  sdf_generate.rs  traffic_idm.rs  traffic_lane_change.rs  traffic_sort_histogram.rs  traffic_sort_keys.rs  traffic_sort_scan.rs  traffic_sort_scatter.rs
crates/traffic/: Cargo.toml  build.rs
crates/traffic/assets/shaders/: road_eval.slang  road_render.slang  traffic_idm.slang  traffic_sort_keys.slang  traffic_sort_scan.slang
crates/traffic/scenarios/: overtake.json
crates/traffic/src/: gpu_road_data.rs  main.rs  scenario.rs  traffic_sim.rs
crates/vre/: Cargo.toml
crates/vre/src/: lib.rs  vk_type.rs  vk_util.rs  vulkan_engine.rs
examples/simple/: Cargo.toml
examples/simple/assets/shaders/: ball.wgsl
examples/simple/src/: main.rs
examples/traffic/: Cargo.toml  build.rs
examples/traffic/scenarios/: overtake.json
examples/traffic/src/: gpu_road_data.rs  main.rs  traffic_sim.rs
main/: Cargo.toml
main/src/: main.rs
shaders/: Cargo.toml
shaders/src/: car_render.rs  grid.rs  lib.rs  road_line.rs  sdf_generate.rs  traffic_idm.rs  traffic_sort_histogram.rs  traffic_sort_scan.rs  traffic_sort_scatter.rs
src/: imgui_renderer.rs  main.rs  player.rs  simulation.rs  vk_util.rs  vulkan_engine.rs
