[workspace]
members = [
    "crates/engine",
    "crates/gpu-shared",
    "crates/road",
    "crates/traffic",
]
resolver = "2"

[workspace.package]
edition = "2021"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]

[profile.dev.build-override]
opt-level = 0

[profile.release]
codegen-units = 1

[profile.release.build-override]
opt-level = 0

# Optimized build for GPU profiling (RGP etc).
[profile.profiling]
inherits = "dev"
opt-level = 3
debug = 1
