[package]
name = "shaders"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
spirv-std = "0.10.0-alpha.1"
glam = { version = "0.32.0", default-features = false, features = ["libm"] }
gpu-shared = { path = "../crates/gpu-shared", default-features = false, features = [
] }
