[package]
name = "engine"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.32.0", features = ["bytemuck"] }
gpu-shared = { path = "../gpu-shared" }
log = "0.4"
zstd = "0.13"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vulkanalia = "0.35.0"
vulkanalia-bootstrap = "0.1.8"
vulkanalia-vma = "0.9.0"
winit = "0.30.12"
